<?xml version="1.0" encoding="utf-8"?><!--<ScrollView-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f2f2f2"
    tools:context=".ui.onboarding.OnboardingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/radio_group_voice_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:paddingTop="24dp"
            android:text="Choose voice recognition"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/radio_none"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/mtrl_card_spacing"
            android:clickable="true"
            android:elevation="3dp"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radio_amazon"
            app:layout_constraintTop_toBottomOf="@id/radio_group_voice_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/none_icon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_none"
                    app:layout_constraintBottom_toTopOf="@id/none_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/none_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="None"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/none_icon"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/radio_google"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/mtrl_card_spacing"
            android:clickable="true"
            android:elevation="3dp"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/google_cloud_icon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_google_cloud"
                    app:layout_constraintBottom_toTopOf="@id/google_cloud_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/google_cloud_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Google Cloud"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/google_cloud_icon"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/radio_amazon"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/mtrl_card_spacing"
            android:clickable="true"
            android:elevation="3dp"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/radio_none"
            app:layout_constraintTop_toBottomOf="@id/radio_group_voice_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/amazon_icon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_amazon"
                    app:layout_constraintBottom_toTopOf="@id/amazon_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/amazon_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Amazon Transcribe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/amazon_icon"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/google_fields_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_google">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_keys"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Google Cloud Speech to Text API key">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/onboarding_api_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints="23nsdjifhasdufpioh2389eh3jken123e"
                    android:background="@color/white"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amazon_fields_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_google"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_access_key"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Amazon Transcribe access key">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/onboarding_access_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_secret_key"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="Amazon Transcribe secret key">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/onboarding_secret_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
