...
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintTop_toTopOf="@id/main_layout"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
        app:navGraph="@navigation/mobile_navigation" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/transcript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
